--- a/style.css
+++ b/style.css
@@ -221,21 +221,18 @@ a {
 
 .container-principal{
     display: grid;
-    grid-template-columns: 1fr 225px 387px 300px 1fr;
+    grid-template-columns: 225px 555px 300px;
     gap: 24px;
 }
 
 .coluna1{
-    grid-column: 2;
     background-color: #2a2aae;
 }
 
 .coluna2{
-    grid-column: 3;
     background-color: #99651a;
 }
 
 .coluna3{
-    grid-column: 4;
     background-color: aqua;
 }
