segunda coluna iniciada

--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
     background: #f3f2ef;
 }
 
+img {
+    display: block;
+    width: 100%;
+}
+
 :root {
     font-size: 62.5%;
 }
@@ -411,9 +416,49 @@ a {
     color: #908f8f;
 }
 
+#eventos a {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+svg {
+    color: #908f8f;
+}
+
 /* Coluna 2 */
 
+.coluna2 {
+    padding: 8px 16px;
+    height: fit-content;
+}
 
+.pesquisar {
+    width: 100%;
+
+    display: flex;
+    align-items: center;
+}
+
+.pesquisar img {
+    max-width: 48px;
+    border-radius: 50%;
+
+    margin-right: 10px;
+}
+
+.pesquisar input {
+    height: 48px;
+    width: calc(100% - 48px - 10px);
+
+    padding: 15px 20px;
+
+    font-size: 14px;
+
+    border-radius: 35px;
+    border: 1px solid #00000099;
+    color: #908f8f;
+}
 
 /* Quebras */
 @media screen and (max-width: 1115px) {
